# underskrift

./: .gitignore  Cargo.toml  gen-test-fixtures.sh
.github/workflows/: ci.yml  publish.yml
docs/adr/: 0001-pades-cades-interop-and-conformance-stage1.md
examples/: sign_simple.rs
src/: der_utils.rs  error.rs  lib.rs  remote.rs  signer.rs
src/cms/: builder.rs  cades.rs  mod.rs  pades.rs  traditional.rs
src/core/: acroform.rs  byte_range.rs  doc_mdp.rs  doc_timestamp.rs  incremental.rs  mod.rs  parser.rs  revision.rs  sig_dict.rs  sig_field.rs
src/crypto/: algorithm.rs  mod.rs  software.rs  traits.rs  verify.rs
src/inspect/: cms.rs  mod.rs
src/ltv/: chain.rs  crl.rs  dss.rs  mod.rs  ocsp.rs  revocation.rs  status.rs  x509_ext.rs
src/policy/: basic.rs  mod.rs  pkix.rs
src/report/: generator.rs  mod.rs  types.rs
src/saci/: mod.rs  parser.rs
src/svt/: algo.rs  claims.rs  embed.rs  issuer.rs  mod.rs  validator.rs
src/trust/: mod.rs  store.rs  store_set.rs
src/tsp/: client.rs  mod.rs  token.rs
src/verify/: chain_verify.rs  cms_verify.rs  extractor.rs  integrity.rs  mod.rs  report.rs
src/visual/: appearance.rs  font.rs  image.rs  layout.rs  mod.rs
tests/: ltv_dss_test.rs  sign_test.rs  svt_trust_test.rs  trust_test.rs  verify_test.rs
tests/fixtures/: ca_cert.pem  chain.pem  intermediate_ca_cert.pem  signer.csr  signer_cert.pem
tests/fixtures/realworld/trust/sig/: sunet-prod-ca-root.crt  test-signca-root.crt
tests/fixtures/realworld/trust/tsa/: eduSignValidator.crt  edusignvalidator_test.crt
